# spectra

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: code-security.yml  container-security.yml  release.yml
api/: main.py
spectra/: analyzer.py  cli.py  models.py
spectra/parsers/: __init__.py  auto.py  generic.py  semgrep.py  trivy.py
spectra/reporters/: __init__.py  json_reporter.py  markdown_reporter.py
tests/: test_api.py  test_parsers.py
tests/samples/: README.md  semgrep_sample.json  trivy_sample.json
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: AttackChains.tsx  FindingsTable.tsx  ReportList.tsx  ReportView.tsx  RiskOverview.tsx  SeverityBadge.tsx  UploadZone.tsx
