[metadata]
name = spectra-security
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    anthropic>=0.49.0
    typer[all]>=0.12.0
    rich>=13.7.0
    pydantic>=2.0.0

[options.entry_points]
console_scripts =
    spectra = spectra.cli:main

[options.packages.find]
include = spectra*
